syntax = "proto3";

package cluster;
option go_package = "clusterpb";

import "go.etcd.io/etcd/raft/raftpb/raft.proto";

message Payload { bytes Data = 1; }

message RaftContext {
  uint64 ID = 1;
  string Address = 2;
}

message JoinClusterResponse {}

message PeerResponse { bool status = 1; }

message GetMembersRequest { string ClusterID = 1; }
message Member {
  uint64 ID = 1;
  string Address = 2;
  bool IsLeader = 3;
  bool IsAlive = 4;
}
message GetMembersResponse { repeated Member Members = 1; }
message GetStatusRequest { string ClusterID = 1; };
message GetStatusResponse {
  bool IsLeader = 1;
  bool HasBeenBootstrapped = 2;
  bool IsInCluster = 3;
};

service Raft {
  rpc ProcessMessage(raftpb.Message) returns (Payload) {}
  rpc JoinCluster(RaftContext) returns (JoinClusterResponse) {}
  rpc GetMembers(GetMembersRequest) returns (GetMembersResponse) {}
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
}

message ProcessMessageRequest {
  string ClusterID = 1;
  raftpb.Message Message = 2;
}

message JoinClusterRequest { string ClusterID = 1; }

service MultiRaft {
  rpc ProcessMessage(ProcessMessageRequest) returns (Payload) {}
  rpc JoinCluster(JoinClusterRequest) returns (JoinClusterResponse) {}
  rpc GetMembers(GetMembersRequest) returns (GetMembersResponse) {}
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse) {}
}

service Node {}